[web-4979] Fixed width and alignment

--- a/style.css
+++ b/style.css
@@ -5374,6 +5374,7 @@ main.main-sidebar {
 }
 
 .ns-article {
+  width: 95%;
   display: flex;
   flex-direction: row;
 }
@@ -5462,7 +5463,7 @@ main.main-sidebar {
 }
 
 .notification-title-width {
-  width: 30%;
+  width: 25%;
 }
 
 .notification-body-width {
