--- a/styles/_custom.scss
+++ b/styles/_custom.scss
@@ -1127,6 +1127,7 @@ main.main-sidebar {
 }
 
 .ns-article {
+  width: 95%;
   display: flex;
   flex-direction: row;
 }
@@ -1204,7 +1205,7 @@ main.main-sidebar {
 }
 
 .notification-title-width {
-  width: 30%;
+  width: 25%;
 }
 
 .notification-body-width {
